updated image source from local to google online

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="inner double">
           <p>Meth Is Still A Large, Growing Problem In Louisville </p>
-          	<a href="http://wfpl.org/meth-still-large-growing-problem-louisville/">          		<div class="image"><img src="\\LPMs01\Users\kjackson\Desktop\Code\portfolio\portfolio\img\meth.jpg" alt= "Meth photo">
+          	<a href="http://wfpl.org/meth-still-large-growing-problem-louisville/">          	<div class="image"><img src="https://photos.app.goo.gl/KjkUTZ1vW1m73UwaA" alt= "Meth photo">
           		</div> </a>
         </div>
 
